123/MyProject/src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Address_For_Correspondence__c</fullName>
        <label>Address For Correspondence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR( TODAY() ) -  YEAR( Date_Of_Birth__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendance2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendance2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <picklistValues>
                <fullName>Hyderabad</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <picklist>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muslim Minority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christian Minority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Educational_Qualification__c</fullName>
        <label>Educational Qualification</label>
        <picklist>
            <picklistValues>
                <fullName>SSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Family_Annual_Income__c</fullName>
        <label>Family Annual Income</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Father_Occupation__c</fullName>
        <label>Father Occupation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Father_s_Mobile_No__c</fullName>
        <label>Father’s Mobile No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Guardian_Name__c</fullName>
        <label>Guardian Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian__c</fullName>
        <label>Guardian</label>
        <picklist>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Husband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interested_Course_1__c</fullName>
        <label>Interested Course 1</label>
        <picklist>
            <picklistValues>
                <fullName>Core Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle Financials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle ADF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle DBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spoken English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personality Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tailoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yoga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tally ERP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interested_Course_2__c</fullName>
        <label>Interested Course 2</label>
        <picklist>
            <picklistValues>
                <fullName>Core Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle Financials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle ADF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle DBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spoken English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personality Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tailoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yoga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tally ERP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab_Absent__c</fullName>
        <label>Lab Absent</label>
        <summaryForeignKey>Lab__c.Student_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <label>Mobile No</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mother_Occupation__c</fullName>
        <label>Mother Occupation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Interested_Course__c</fullName>
        <label>Other Interested Course</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passed_Out_Organization__c</fullName>
        <label>Passed Out Organization</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_No__c</fullName>
        <label>Passport No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanent_Address__c</fullName>
        <label>Permanent Address</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proofs_Submitted__c</fullName>
        <label>Proofs Submitted</label>
        <picklist>
            <picklistValues>
                <fullName>Ration Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voter ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving License</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Year_Of_Pass__c</fullName>
        <label>Year Of Pass</label>
        <picklist>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Electronic_student</fullName>
        <active>true</active>
        <label>Electronic student</label>
    </recordTypes>
    <recordTypes>
        <fullName>ITStudent</fullName>
        <active>true</active>
        <label>IT Student</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Father_Occupation_Val_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND( REGEX( Father_Occupation__c , &quot;[A-Z a-z]&quot;) )</errorConditionFormula>
        <errorDisplayField>Father_Occupation__c</errorDisplayField>
        <errorMessage>Only Alphabets are Allowed For &quot;Father Occupation&quot; Field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mother_Occupation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( REGEX( Mother_Occupation__c , &quot;[A-Z][a-z]&quot;) )</errorConditionFormula>
        <errorDisplayField>Mother_Occupation__c</errorDisplayField>
        <errorMessage>Only Alphabets Like---[A-Z][a-z]</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Registered_Strength_Val_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>Course__r.Course_Intake_Strength__c  &lt;  Course__r.Registered_Strength__c</errorConditionFormula>
        <errorMessage>Ths Seats for the selection Course is Filled.
Please Choose Another Course</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Student_Name_Val_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( REGEX( Name , &quot;^[a-zA-Z]*$&quot;) )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Student Name Should Contain Alphabets</errorMessage>
    </validationRules>
</CustomObject>